--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.4.1",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
