--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@openzeppelin/contracts": "^4.4.1",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "web3": "^1.6.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
