--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hot-toast": "^2.2.0",
     "web3": "^1.6.1"
   },
   "devDependencies": {
